# pyafipws

./: .coveragerc  .gitignore  .hgtags  CONTRIBUTING.md  COPYING  COPYING.LESSER  LICENSE  M2Crypto-0.37.1-cp39-cp39-win_amd64.whl  Makefile  README.md  __init__.py  afip_ca_info.crt  build-pyafipws.bat  build-pyrece.bat  comodo.crt  config-pyrece.txt  config.txt  cot.py  cot.pyw  efactura.py  factura.csv  facturas.csv  fe_pdf.py  formato_cot.py  formato_csv.py  formato_dbf.py  formato_json.py  formato_txt.py  formato_xml.py  get_dep.py  iibb.py  instalar-pyafipws.bat  instalar-pyrece.bat  instalar.bat  libpyafipws.c  libpyafipws.def  libpyafipws.h  licencia-pyafipws.txt  licencia-pyrece.txt  licencia.txt  (+99 more)
.github/: openssl.cnf  pull_request_template.md
cache/: TA-2b4277f5962bd2cb0265c0fac4b32304.xml
conf/: afip_ca_info.crt  arba.crt  arba_2023.crt  rece.ini  wslpg.ini  wslsp.ini  wsltv.ini  wslum.ini  wsremcarne.ini
datos/: TB_20111111112_000000_20080124_000001.txt  TB_20111111112_000000_20080124_000001.xml  TB_20111111112_000000_20101229_000001.txt  TB_20111111112_000000_20101229_000001.xml  facturas.csv  facturas.json  facturas.txt  facturas.xlsx  facturas.xml
ejemplos/: FacturaElectronica.java  factura.json  factura_electronica.c  factura_electronica.cs  factura_electronica.php  factura_electronica.py  factura_electronica.vbs  libpyafipws_dll_test.bas  libpyafipws_dll_test.c  libpyafipws_dll_test.prg  rece.bat  remito_electronico.py  remito_electronico_carnico.prg  remito_electronico_carnico.vbs  remito_electronico_harina.vbs  rg1361.php  wsfecred.bas
(+539 files in other folders)
