[pycodestyle]
max_line_length = 120
ignore = E501,W601

[options.entry_points]
console_scripts =
    
    cot = pyafipws.cot:main
    iibb = pyafipws.iibb:main
    padron = pyafipws.padron:main
    pyemail = pyafipws.pyemail:main
    pyfepdf = pyafipws.pyfepdf:main
    pyi25 = pyafipws.pyi25:main
    pyqr = pyafipws.pyqr:main
    rece1 = pyafipws.rece1:main
    receb1 = pyafipws.receb1:main
    recem = pyafipws.recem:main
    recet = pyafipws.recet:main
    recex1 = pyafipws.recex1:main
    rg3685 = pyafipws.rg3685:main
    sired = pyafipws.sired:main
    trazafito = pyafipws.trazafito:main
    trazamed = pyafipws.trazamed:main
    trazaprodmed = pyafipws.trazaprodmed:main
    trazarenpre = pyafipws.trazarenpre:main
    trazavet = pyafipws.trazavet:main
    wdigdepfiel = pyafipws.wdigdepfiel:main
    ws_sire = pyafipws.ws_sire:main
    ws_sr_padron = pyafipws.ws_sr_padron:main
    wsaa = pyafipws.wsaa:main
    wsbfev1 = pyafipws.wsbfev1:main
    wscdc = pyafipws.wscdc:main
    wscoc = pyafipws.wscoc:main
    wsct = pyafipws.wsct:main
    wsctg = pyafipws.wsctg:main   
    wsfecred = pyafipws.wsfecred:main
    wsfev1 = pyafipws.wsfev1:main
    wsfexv1 = pyafipws.wsfexv1:main
    wslpg = pyafipws.wslpg:main
    wslsp = pyafipws.wslsp:main
    wsltv = pyafipws.wsltv:main
    wslum = pyafipws.wslum:main
    wsmtx = pyafipws.wsmtx:main
    wsremazucar = pyafipws.wsremazucar:main
    wsremcarne = pyafipws.wsremcarne:main
    wsremharina = pyafipws.wsremharina:main